...
            <objects>
                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="iOSArchitecture_MVVM" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Gb-5U-VsZ">
                                <rect key="frame" x="30" y="104" width="315" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="pvp-AC-Rl6"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="7Bu-rG-bJE"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5yL-WJ-uc2">
                                <rect key="frame" x="30" y="174" width="315" height="40"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="6DA-hm-VRd"/>
                                </connections>
...
                                <rect key="frame" x="30" y="264" width="315" height="40"/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="eIJ-mb-4wM" secondAttribute="height" multiplier="63:8" id="WN8-ZL-6iW"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="onLoginClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="M1s-Lr-Njg"/>
                                </connections>
                            </button>
...
